# SPDX-License-Identifier: Apache-2.0
#
# Plain-CMake (non-OpenStrata) test wiring. The authoritative verification path
# is `ost plugin test plugins/usdVrm` (the L0-L6 pyramid); this CTest target
# exists so users building with bare CMake still get an end-to-end smoke test.
#
# It drives the freshly built plugin from Python, so it needs OpenUSD's bin/lib
# (and site-packages) plus the bundle's lib/ and plugInfo root on the right env
# vars — injected portably via ENVIRONMENT_MODIFICATION (CMake 3.22+).

# Resolve the OpenUSD install root from the pxr CMake package location (shared by
# both the C++ unit test and the Python smoke test below).
set(_usd_root "")
if(pxr_DIR AND EXISTS "${pxr_DIR}/bin")
    set(_usd_root "${pxr_DIR}")
elseif(pxr_DIR)
    get_filename_component(_usd_root "${pxr_DIR}/../../.." ABSOLUTE)
endif()

# -----------------------------------------------------------------------------
# C++ unit test: pure-logic conversions in util/TransformUtil (no plugin/runtime
# needed, just gf). Compiles the one TU directly so it's independent of the
# shared plugin library.
# -----------------------------------------------------------------------------
add_executable(test_transform_util
    test_transform_util.cpp
    "${CMAKE_CURRENT_SOURCE_DIR}/../src/util/TransformUtil.cpp")
target_include_directories(test_transform_util PRIVATE
    "${CMAKE_CURRENT_SOURCE_DIR}/../src"
    ${PXR_INCLUDE_DIRS})
if(TARGET gf)
    target_link_libraries(test_transform_util PRIVATE gf)
elseif(TARGET pxr::gf)
    target_link_libraries(test_transform_util PRIVATE pxr::gf)
elseif(TARGET usd_ms)
    target_link_libraries(test_transform_util PRIVATE usd_ms)
else()
    target_link_libraries(test_transform_util PRIVATE ${PXR_LIBRARIES})
endif()
if(MSVC)
    target_compile_definitions(test_transform_util PRIVATE NOMINMAX _USE_MATH_DEFINES)
    target_compile_options(test_transform_util PRIVATE /utf-8)
endif()
add_test(NAME usdvrm_transform_util COMMAND test_transform_util)
# gf's DLL (and its deps) live in the USD lib dir; put it on the loader path.
set_tests_properties(usdvrm_transform_util PROPERTIES
    ENVIRONMENT_MODIFICATION
        "PATH=path_list_prepend:${_usd_root}/bin;PATH=path_list_prepend:${_usd_root}/lib")

find_package(Python3 COMPONENTS Interpreter QUIET)
if(NOT Python3_Interpreter_FOUND)
    message(STATUS "usdVrm: Python3 interpreter not found; skipping smoke test")
    return()
endif()

set(_bundle_dir "${CMAKE_CURRENT_SOURCE_DIR}/..")
set(_lib_dir "${_bundle_dir}/lib")
# The plain vrmContainer DLL/SO the plugin links: in-tree target dir in the
# composed root build, installed workspace-prefix bin/ in the ost flow (the
# imported target's location). Replaces the removed runtime/lib copy.
set(_vrm_container_dir "$<TARGET_FILE_DIR:vrmContainer::vrmContainer>")

# Plain-CMake CTest uses a build-tree plugInfo with an absolute LibraryPath, so
# tests do not depend on the source-tree plugInfo generated by the ost flow.
# CMake paths use forward slashes on every platform, so the JSON stays valid.
set(USDVRM_TEST_LIBRARYPATH
    "${_lib_dir}/lib${PLUGIN_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX}")
set(_plug_resources "${CMAKE_CURRENT_BINARY_DIR}/resources/usdVrm")
configure_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/plugInfo.in.json"
    "${_plug_resources}/plugInfo.json"
    @ONLY)

# The typed Vrm*API schemas the importer applies live in the sibling vrmSchema
# bundle since the Phase 1 split: its plugInfo/generatedSchema must be on the
# registry path and its lib/ on the loader path (libUsdVrmFileFormat links
# libvrmSchema).
set(_vrm_schema_bundle "${_bundle_dir}/../vrmSchema")
set(_vrm_schema_resources "${_vrm_schema_bundle}/plugin/resources/vrmSchema")

set(_smoke_env
    "PATH=path_list_prepend:${_usd_root}/bin;PATH=path_list_prepend:${_usd_root}/lib;PATH=path_list_prepend:${_lib_dir};PATH=path_list_prepend:${_vrm_container_dir};PATH=path_list_prepend:${_vrm_schema_bundle}/lib;PYTHONPATH=path_list_prepend:${_usd_root}/lib/python;PYTHONPATH=path_list_prepend:${_usd_root}/lib/site-packages;PXR_PLUGINPATH_NAME=path_list_prepend:${_plug_resources};PXR_PLUGINPATH_NAME=path_list_prepend:${_vrm_schema_resources}")

add_test(
    NAME usdvrm_python_smoke
    COMMAND ${Python3_EXECUTABLE}
            "${CMAKE_CURRENT_SOURCE_DIR}/test_usdvrm_plugin.py")

set_tests_properties(usdvrm_python_smoke PROPERTIES
    ENVIRONMENT_MODIFICATION "${_smoke_env}")

# Real-world VRM compatibility corpus (redistributable avatars under corpus/;
# see corpus/CORPUS.md). Same runtime + plugin env as the fixture smoke test.
add_test(
    NAME usdvrm_corpus_smoke
    COMMAND ${Python3_EXECUTABLE}
            "${CMAKE_CURRENT_SOURCE_DIR}/test_usdvrm_corpus.py")

set_tests_properties(usdvrm_corpus_smoke PROPERTIES
    ENVIRONMENT_MODIFICATION "${_smoke_env}")

# Negative corpus: deliberately malformed avatars (corpus/generated/malformed/)
# that pin the importer's diagnostic contract — each provokes exactly one VRMxxx
# code. Manifest-driven by corpus/generated/negative-manifest.json. Same env.
add_test(
    NAME usdvrm_negative
    COMMAND ${Python3_EXECUTABLE}
            "${CMAKE_CURRENT_SOURCE_DIR}/test_usdvrm_negative.py")

set_tests_properties(usdvrm_negative PROPERTIES
    ENVIRONMENT_MODIFICATION "${_smoke_env}")

# Stage validator + diagnostic taxonomy + compatibility report (tools/). Drives
# the freshly built importer, then runs the pure-Python validator/report tools
# over the imported stages. Same runtime + plugin env as the smoke test.
add_test(
    NAME usdvrm_validate
    COMMAND ${Python3_EXECUTABLE}
            "${CMAKE_CURRENT_SOURCE_DIR}/test_usdvrm_validate.py")

set_tests_properties(usdvrm_validate PROPERTIES
    ENVIRONMENT_MODIFICATION "${_smoke_env}")

# Phase 0 workspace-split regression gate: current behavior must match the
# committed baseline evidence under <repo>/tests/baseline (stage snapshots,
# structural digests, schema contract, discovery, diagnostics, symbols). Any
# diff in a structural/migration PR is a regression by definition — see
# docs/architecture/WORKSPACE.md §7 and tests/baseline/README.md.
get_filename_component(_repo_root "${_bundle_dir}/../.." ABSOLUTE)
add_test(
    NAME usdvrm_baseline
    COMMAND ${Python3_EXECUTABLE}
            "${_repo_root}/tools/baseline_freeze.py" --check)

set_tests_properties(usdvrm_baseline PROPERTIES
    ENVIRONMENT_MODIFICATION "${_smoke_env}")
